<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#76ABAE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:background="#EEEEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/plate"
        android:textColor="#EEEEEE"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textPrize"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textPrize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="cursive"
        android:text="@string/prize"
        android:textColor="#EEEEEE"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/btnFact"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:onClick="facturar"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/btnDev"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/btnBuy"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/fact"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnBuy"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:onClick="comprar"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/btnPrev"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/buy"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnHist"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:onClick="facturar"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFact"
        app:srcCompat="@drawable/historico"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:onClick="irAnterior"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/prev"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:onClick="irSiguiente"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/next"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnDev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:onClick="devolver"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/dev"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/totalPrize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHist"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    <TextView
        android:id="@+id/textPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/totalPedidos"
        app:layout_constraintEnd_toStartOf="@+id/btnHist"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrev" />

    <TextView
        android:id="@+id/textPedidos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/btnHist"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPedidos" />

    <TextView
        android:id="@+id/textTotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHist"
        app:layout_constraintTop_toBottomOf="@+id/textTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>